# peakingduck

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  .travis_script.sh  CMakeLists.txt  LICENSE  README.md  codecov.yml  peakingduckConfig.cmake.in  pypath_test.py  pytest.ini  requirements.txt  setup.py
docs/: 1d_data.rst  Doxyfile  conf.py  cpp_interface.rst  environment.yml  index.rst  peak_finding.rst  python_interface.rst  requirements.txt
docs/api/: peakingduck.core.rst  peakingduck.io.rst  peakingduck.plotting.rst  peakingduck.rst  peakingduck.util.rst
docs/cpp_api/: peakingduck.constants.rst  peakingduck.core.rst  peakingduck.io.rst  peakingduck.rst  peakingduck.util.rst
examples/: customfilter.py  processes.py  realspectrum.py  simple.py
examples/cpp/: CMakeLists.txt  README.md  processes.cpp
examples/py/: customfilter.py  processes.py  realspectrum.py  snip.py
include/: common.hpp  constants.hpp  core.hpp  exceptions.hpp  io.hpp  peakingduck.hpp  util.hpp
include/core/: crtp.hpp  numerical.hpp  numericalfunctions.hpp  numericalmacros.h  peaking.hpp  process.hpp  smoothing.hpp  spectral.hpp
include/io/: spectralio.hpp
include/util/: file.hpp  range.hpp  stream.hpp  string.hpp  window.hpp
notebooks/: binned_classification.ipynb
peakingduck/: __init__.py
peakingduck/core/: __init__.py  peaking.py  process.py  smoothing.py
peakingduck/io/: __init__.py
peakingduck/plotting/: __init__.py  helpers.py  plotadaptor.py
peakingduck/util/: __init__.py
py/: CMakeLists.txt  peakingduck.cpp
reference/: spectrum0.csv  spectrum1.csv  spectrum2.csv  spectrum3.csv
tests/cpp/: CMakeLists.txt  main.cpp  test_core.cpp  test_numerical.cpp  test_process.cpp  test_smoothing.cpp  test_util.cpp
tests/py/: coretests.py  numericaltests.py  spectraltests.py  testsuite.py
